# snowy-rust-cqrs-full-stack-app-demo

./: Cargo.toml
app/: .env  Cargo.toml  Dioxus.toml
app/assets/: styles.css
app/src/: app.rs  error.rs  main.rs
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
model/: Cargo.toml
model/src/: lib.rs  team.rs  weather.rs
server/: .env  Cargo.toml
server/db/liquibase/: changelog.yaml
server/db/liquibase/changesets/: 0001-initial.sql
server/samples/commands/: add-member.json  track-member-forecast.json
server/src/: main.rs
server/src/api/: config.rs  cors.rs  cqrs.rs  db.rs  error.rs  handlers.rs  mod.rs  server.rs
server/src/domain/: aggregates.rs  commands.rs  error.rs  events.rs  mod.rs  services.rs
server/src/queries/: logging.rs  mod.rs  team.rs
